# wse-simulator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: deepseek_v3_ffn.yaml  deepseek_v4_pro_ffn.yaml  dse_sweep.yaml  mixtral_8x7b.yaml  wafer_small.yaml
docs/: Cerebras_Color_机制速查.md  allgather_direct_vs_nd_algorithm_report.html  allgather_tdm_vs_mesh_4x4_report.html  allgather_tdm_vs_mesh_8x8_report.html  allgather_tdm_vs_mesh_rect_report.html  col_s7_b4_mesh2d_latency_breakdown.md  color_dse_allgather_report.html  partition_strategies.md  tdm_fb_12x16_color_subtopology.html  tdm_fb_12x16_restricted_color_subtopology.html  tdm_fb_14x14_color_subtopology.html  tdm_fb_14x14_restricted_color_subtopology.html  tdm_fb_4x4_color_subtopology.html  tdm_fb_4x4_color_subtopology.md  tdm_fb_6x8_color_subtopology.html  tdm_fb_6x8_restricted_color_subtopology.html  tdm_fb_8x8_k2_n6_color_subtopology.html  tdm_fb_8x8_k2_n6_color_subtopology.md  tdm_fb_8x8_k4_n3_color_subtopology.html  tdm_fb_8x8_k4_n3_color_subtopology.md  tdm_fb_8x8_k8_n2_color_subtopology.html  tdm_fb_8x8_k8_n2_color_subtopology.md  tdm_fb_color_scaling.html  tdm_fb_k2_n4_color_subtopology.html  tdm_fb_k2_n4_color_subtopology.md  tdm_flat_butterfly_4x4.md  tdm_flat_butterfly_8x8.md  topology_analysis.md
dse_200_simpy/: full_dse_pareto.csv  full_dse_trials.csv  full_dse_trials.json
examples/: __init__.py  deepseek_v3_mapping.py  mixtral_decode.py  plot_pareto.py  run_allgather_tdm_vs_mesh_4x4.py  run_allgather_tdm_vs_mesh_8x8.py  run_allgather_tdm_vs_mesh_rect.py  run_color_dse_allgather.py  (+9 more)
(+112 files in other folders)
